--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
 
 body {
+  background-image: linear-gradient(180deg, white , rgb(239, 246, 247));
+
   position: relative;
   top: -50px;
   margin: 0;
@@ -11,7 +13,6 @@ body {
   text-align: center;
   color: #19171a;
   margin: 80px 10px;
-  background-color: rgb(236, 237, 247);
 }
 
 video {
